with some minor fixes

--- a/assgn5/product_browsing.html
+++ b/assgn5/product_browsing.html
@@ -29,16 +29,13 @@
         </br>
         <!-- This is where the header template ends -->
         <div id = "container"></div>
-            <div id =class="my-sorter">
-                Sort By:<br>
-            <select name="sorting class">
+            <select class="select-css">
                     <option value="Name">Name</option>
                     <option value="Price1">Price (low to high)</option>
                     <option value="Price2">Price (high to low)</option>
                     <option value="Favorites">Favorites</option>
                     <option value="Popular">Popular</option>
             </select>
-            </div>
             <div class="grid-container">
                 <div class="grid-item">
                     <a href="product_detail.html">
