--- a/assgn5/product_detail.html
+++ b/assgn5/product_detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"></html>
 <head>
-	<!-- The HEAD section has (mostly) items that are not directly seen by the user -->
+    <!-- The HEAD section has (mostly) items that are not directly seen by the user -->
 	<meta charset="utf-8" />  <!-- Specifies character encoding for HTML doc -->
 	<meta name="author" content="Kat Phelps">
 	<meta name="keywords" content="Carnegie Mellon University, 05-430, HCI">
@@ -31,24 +31,21 @@
         <div id = "container"></div>
             <img src="images/pillow1.jpg" alt="pillow1" class="pillow1">
             <br>
-            Color:
-            <select name="sorting class">
+            <select class="select-css">
                     <option value="Cream">Cream</option>
                     <option value="Pink">Pink</option>
                     <option value="Red">Red</option>
                     <option value="Blue">Blue</option>
             </select>
             <br>
-            Filling:
-            <select name="sorting class">
+            <select class="select-css">
                     <option value="Cream">Wool</option>
                     <option value="Pink">Icelandic Sheep Wool</option>
                     <option value="Red">Silk</option>
                     <option value="Blue">Softest yarn</option>
             </select>
             <br>
-            Size:
-            <select name="sorting class">
+            <select class="select-css">
                     <option value="40x40">40x40</option>
                     <option value="60x60">60x60</option>
                     <option value="80x80">80x80</option>
