added more things but still not super pretty

--- a/assgn5/product_browsing.html
+++ b/assgn5/product_browsing.html
@@ -36,6 +36,24 @@
                     <option value="Favorites">Favorites</option>
                     <option value="Popular">Popular</option>
             </select>
+            <br/>
+            Colors<br/>
+            <input type="checkbox" name="checkbox1" value="Cream">Cream<br>
+            <input type="checkbox" name="checkbox1" value="Pink">Pink<br>
+            <input type="checkbox" name="checkbox1" value="Red">Red<br>
+            <input type="checkbox" name="checkbox1" value="Blue">Blue<br>
+            <br/>
+            Yarn<br/>
+            <input type="checkbox" name="checkbox1" value="Wool">Wool<br>
+            <input type="checkbox" name="checkbox1" value="Icelandic Sheep Wool">Icelandic Sheep Wool<br>
+            <input type="checkbox" name="checkbox1" value="Silk">Silk<br>
+            <input type="checkbox" name="checkbox1" value="Softest Yarn">Softest Yarn<br>
+            <br/>
+            Size<br/>
+            <input type="checkbox" name="checkbox1" value="40x40">40x40<br>
+            <input type="checkbox" name="checkbox1" value="60x60">60x60<br>
+            <input type="checkbox" name="checkbox1" value="80x80">80x80<br>
+            <br/>
             <div class="grid-container">
                 <div class="grid-item">
                     <a href="product_detail.html">
