--- a/assgn5/product_detail.html
+++ b/assgn5/product_detail.html
@@ -39,10 +39,10 @@
             </select>
             <br>
             <select class="select-css">
-                    <option value="Cream">Wool</option>
-                    <option value="Pink">Icelandic Sheep Wool</option>
+                    <option value="Wool">Wool</option>
+                    <option value="Icelandic Sheep Wool">Icelandic Sheep Wool</option>
                     <option value="Red">Silk</option>
-                    <option value="Blue">Softest yarn</option>
+                    <option value="Softest Yarn">Softest Yarn</option>
             </select>
             <br>
             <select class="select-css">
