--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en"></html>
+
+<link href='https://fonts.googleapis.com/css?family=Amaranth' rel='stylesheet'>
+<style>
+#body {
+    font-family: 'Amaranth';font-size: 22px;
+}
+</style>
+
 <head>
 	<!-- The HEAD section has (mostly) items that are not directly seen by the user -->
 	<meta charset="utf-8" />  <!-- Specifies character encoding for HTML doc -->
@@ -12,25 +21,31 @@
 <html>
     <body>
         <!-- This is where the header template begins -->
-        <div class="promotional-header">
+        <div id="promotional-header">
             <h3>50% OFF ALL COUCH PILLOWS UNTIL FEBURARY 27TH...</h1>
         </div>
-        <div class="fluffstuff-header">
+        <div id="login-search-cart">
+            <li><strong>LOGIN</strong></li>
+            <li><strong>SEARCH</strong></li>
+            <li><a style="text-decoration:none" href="cart.html"><strong>CART</strong></a></li> 
+        </div>
+        <div id="fluffstuff-header">
             <p><strong>FLUFF STUFF</strong></p>
         </div>
         <nav>
             <ul>
-                <li><a style="text-decoration:none" href="product_browsing.html"><strong>Products</strong></a></li>
-                <li><a style="text-decoration:none" href="index.html"><strong>Home</strong></a></li>
-                <li><a style="text-decoration:none" href="about_us.html"><strong>About Us</strong></a></li>
+                <li><a style="text-decoration:none" href="product_browsing.html"><strong>PRODUCTS</strong></a></li>
+                <li><a style="text-decoration:none" href="index.html"><strong>HOME</strong></a></li>
+                <li><a style="text-decoration:none" href="about_us.html"><strong>ABOUT US</strong></a></li>
             </ul>
         </nav>
         </br>
         </br>   
         <!-- This is where the header template ends -->
         <div id = "container"></div>
-            <img src="images/home-page.jpeg" alt="home page pillow" class="home-page">
-            <div class="descriptive-text">
+            </br>
+            <img src="images/home-page.jpg" alt="home page pillow" id="home-page">
+            <div id="descriptive-text">
                 <p>Fluff Stuff has a variety of high quality pillows from luxury brands around the world. 
                 Working to provide the best styles along with the cheapest prices we aim to create
                 long lasting relationships with customers who are serviced with care and efficiency.</p>
@@ -40,9 +55,9 @@
         <!-- This is where the footer template begins -->
         <div id = "contact-us">
             <h3>Contact Us</h3>
-            <img src="images/fb.png" alt="facebook" class="contact-us-image">
-            <img src="images/instagram.png" alt="instgram" class="contact-us-image">
-            <img src="images/twitter.png" alt="twitter" class="contact-us-image">
+            <img src="images/fb.png" alt="facebook" id="contact-us-image">
+            <img src="images/instagram.png" alt="instgram" id="contact-us-image">
+            <img src="images/twitter.png" alt="twitter" id="contact-us-image">
         </div>
         <!-- This is where the footer template ends -->
     </body>
