--- a/homework_5/product_browsing.html
+++ b/homework_5/product_browsing.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="en"></html>
+
+<link href='https://fonts.googleapis.com/css?family=Amaranth' rel='stylesheet'>
+<style>
+#body {
+    font-family: 'Amaranth';font-size: 22px;
+}
+</style>
+
+
 <head>
 	<!-- The HEAD section has (mostly) items that are not directly seen by the user -->
 	<meta charset="utf-8" />  <!-- Specifies character encoding for HTML doc -->
@@ -12,92 +21,100 @@
 <html>
     <body>
         <!-- This is where the header template begins -->
-        <div class="promotional-header">
+        <div id="promotional-header">
             <h3>50% OFF ALL COUCH PILLOWS UNTIL FEBURARY 27TH...</h1>
         </div>
-        <div class="fluffstuff-header">
+        <div id="login-search-cart">
+            <li><strong>LOGIN</strong></li>
+            <li><strong>SEARCH</strong></li>
+            <li><a style="text-decoration:none" href="cart.html"><strong>CART</strong></a></li> 
+        </div>
+        <div id="fluffstuff-header">
             <p><strong>FLUFF STUFF</strong></p>
         </div>
         <nav>
             <ul>
-                <li><a style="text-decoration:none" href="product_browsing.html"><strong>Products</strong></a></li>
-                <li><a style="text-decoration:none" href="index.html"><strong>Home</strong></a></li>
-                <li><a style="text-decoration:none" href="about_us.html"><strong>About Us</strong></a></li>
+                <li><a style="text-decoration:none" href="product_browsing.html"><strong>PRODUCTS</strong></a></li>
+                <li><a style="text-decoration:none" href="index.html"><strong>HOME</strong></a></li>
+                <li><a style="text-decoration:none" href="about_us.html"><strong>ABOUT US</strong></a></li>
             </ul>
         </nav>
         </br>
         </br>
         <!-- This is where the header template ends -->
         <div id = "container"></div>
-            <select class="select-css">
-                    <option value="Name">Name</option>
+            <div id="filter-sidebar">
+                <div id="sorting-header"><b>Sort By:</b> </div>
+                <select id="select-css">
+                    <option value="Featured">Featured</option>
                     <option value="Price1">Price (low to high)</option>
                     <option value="Price2">Price (high to low)</option>
                     <option value="Favorites">Favorites</option>
                     <option value="Popular">Popular</option>
-            </select>
-            <div id="sidebar">
-                Colors: 
-                <input type="checkbox" name="checkbox1" value="Cream">Cream
-                <input type="checkbox" name="checkbox1" value="Pink">Pink
-                <input type="checkbox" name="checkbox1" value="Red">Red
-                <input type="checkbox" name="checkbox1" value="Blue">Blue
+                </select>
+                </br>
+                </br>
+                <div id="sorting-header"><b>Colors:</b> </div>
+                <input type="checkbox" name="checkbox1" value="Cream">Cream</br>
+                <input type="checkbox" name="checkbox1" value="Pink">Pink</br>
+                <input type="checkbox" name="checkbox1" value="Red">Red</br>
+                <input type="checkbox" name="checkbox1" value="Blue">Blue</br>
                 <br/>
-                Yarn: 
-                <input type="checkbox" name="checkbox1" value="Wool">Wool
-                <input type="checkbox" name="checkbox1" value="Icelandic Sheep Wool">Icelandic Sheep Wool
-                <input type="checkbox" name="checkbox1" value="Silk">Silk
-                <input type="checkbox" name="checkbox1" value="Softest Yarn">Softest Yarn
+                <div id="sorting-header"><b>Yarn:</b> </div>
+                <input type="checkbox" name="checkbox1" value="Wool">Wool</br>
+                <input type="checkbox" name="checkbox1" value="Icelandic Sheep Wool">Icelandic Sheep Wool</br>
+                <input type="checkbox" name="checkbox1" value="Silk">Silk</br>
+                <input type="checkbox" name="checkbox1" value="Softest Yarn">Softest Yarn</br>
                 <br/>
-                Size: 
-                <input type="checkbox" name="checkbox1" value="40x40">40x40
-                <input type="checkbox" name="checkbox1" value="60x60">60x60
-                <input type="checkbox" name="checkbox1" value="80x80">80x80
+                <div id="sorting-header"><b>Size:</b> </div>
+                <input type="checkbox" name="checkbox1" value="40x40">40x40</br>
+                <input type="checkbox" name="checkbox1" value="60x60">60x60</br>
+                <input type="checkbox" name="checkbox1" value="80x80">80x80</br>
             </div>
-            <div class="grid-container">
-                <div class="grid-item">
+            <div id="grid-container">
+                <div id="grid-item">
                     <a href="product_detail.html">
-                    <img src="images/pillow1.jpg" alt="grid-image" class="grid-image"><p>White Cream Couch Pillow</p>
+                    <img src="images/pillow1.jpg" alt="grid-image" id="grid-image"><p>White Cream Couch Pillow</p>
                     </a>
                 </div>
-                <div class="grid-item">
+                <div id="grid-item">
                     <a href="product_detail.html">
-                    <img src="images/pillow2.jpg" alt="grid-image" class="grid-image">
+                    <img src="images/pillow2.jpg" alt="grid-image" id="grid-image">
                     </a>
                 </div>
-                <div class="grid-item">
+                <div id="grid-item">
                     <a href="product_detail.html">
-                    <img src="images/pillow3.jpg" alt="grid-image" class="grid-image">
+                    <img src="images/pillow3.jpg" alt="grid-image" id="grid-image">
                     </a>
                 </div>
-                <div class="grid-item">
+                <div id="grid-item">
                     <a href="product_detail.html">
-                    <img src="images/pillow4.jpg" alt="grid-image" class="grid-image">
+                    <img src="images/pillow4.jpg" alt="grid-image" id="grid-image">
                     </a>
                 </div>
-                <div class="grid-item">
+                <div id="grid-item">
                     <a href="product_detail.html">
-                    <img src="images/pillow5.jpg" alt="grid-image" class="grid-image">
+                    <img src="images/pillow5.jpg" alt="grid-image" id="grid-image">
                     </a>
                 </div>
-                <div class="grid-item">
+                <div id="grid-item">
                     <a href="product_detail.html">
-                    <img src="images/pillow6.jpg" alt="grid-image" class="grid-image">
+                    <img src="images/pillow6.jpg" alt="grid-image" id="grid-image">
                     </a>
                 </div>
-                <div class="grid-item">
+                <div id="grid-item">
                     <a href="product_detail.html">
-                    <img src="images/pillow7.jpg" alt="grid-image" class="grid-image">
+                    <img src="images/pillow7.jpg" alt="grid-image" id="grid-image">
                     </a>
                 </div>
-                <div class="grid-item">
+                <div id="grid-item">
                     <a href="product_detail.html">
-                    <img src="images/pillow8.jpg" alt="grid-image" class="grid-image">
+                    <img src="images/pillow8.jpg" alt="grid-image" id="grid-image">
                     </a>
                 </div>
-                <div class="grid-item">
+                <div id="grid-item">
                     <a href="product_detail.html">
-                    <img src="images/pillow9.jpg" alt="grid-image" class="grid-image">
+                    <img src="images/pillow9.jpg" alt="grid-image" id="grid-image">
                     </a>
                 </div>
             </div>
@@ -106,9 +123,9 @@
         <!-- This is where the footer template begins -->
         <div id = "contact-us">
             <h3>Contact Us</h3>
-            <img src="images/fb.png" alt="facebook" class="contact-us-image">
-            <img src="images/instagram.png" alt="instgram" class="contact-us-image">
-            <img src="images/twitter.png" alt="twitter" class="contact-us-image">
+            <img src="images/fb.png" alt="facebook" id="contact-us-image">
+            <img src="images/instagram.png" alt="instgram" id="contact-us-image">
+            <img src="images/twitter.png" alt="twitter" id="contact-us-image">
         </div>
         <!-- This is where the footer template ends -->
     </body>
