--- a/index.html
+++ b/index.html
@@ -39,7 +39,24 @@
     <div class="container" id="duo">
         <div class="row">
             <div class="col">
-                <img src="images/profile2.JPG" class="img-fluid" alt="Responsive image" id="duo-image">
+                <div id="my-carousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#my-carousel" data-slide-to="0" class="active"></li>
+                      <li data-target="#my-carousel" data-slide-to="1"></li>
+                      <li data-target="#my-carousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/profile2.JPG" id="duo-image">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/profile4.JPG" id="duo-image">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/profile3.JPG" id="duo-image">
+                      </div>
+                    </div>
+                  </div>
                 <br></br>
             </div>
             <div class="col" id="duo-description">
@@ -50,6 +67,13 @@
                     This summer I'll be working at Google as a Technical Program Manager in New York. I'll be working on a corporate
                     engineering team that uses data science to inform leadership on their decisions.
                     <br></br>
+                    I'm interested in Quantitative, Data Science, and PM positions for Summer 2021 Internships.
+                    <br></br>
+                    <center>
+                        <a href="https://www.linkedin.com/in/kathryn-phelps-64594b149/"><img src="https://img.icons8.com/bubbles/50/000000/linkedin.png"/></a>
+                        <a href="https://github.com/katphelps"><img src="https://img.icons8.com/bubbles/50/000000/github.png"/></a>
+                        <a href="mailto:kphelps2@andrew.cmu.com"><img src="https://img.icons8.com/bubbles/50/000000/email.png"/></a>
+                    </center>
                 </p>
             </div>
         </div>
@@ -65,7 +89,7 @@
     <div class="container-fluid" id="tres">
         <div class="row">
             <div class ="col">
-                <div class="tres-card">
+                <div class="tres-card" id="a">
                     <div class="tres-title">
                         <p>Teaching Assistant 36-200</p>
                     </div>
@@ -82,7 +106,7 @@
                 </div>
             </div>
             <div class ="col">
-                <div class="tres-card">
+                <div class="tres-card" id="b">
                     <div class="tres-title">
                         <p>Stellar Temperature Project</p>
                     </div>
@@ -98,7 +122,7 @@
                 </div>
             </div>
             <div class ="col">
-                <div class="tres-card">
+                <div class="tres-card" id="c">
                     <div class="tres-title">
                         <p>The A&M Creamery</p>
                     </div>
@@ -118,7 +142,7 @@
         <br></br>
         <div class="row">
             <div class ="col">
-                <div class="tres-card">
+                <div class="tres-card" id="c">
                     <div class="tres-title">
                         <p>Uber Database Project</p>
                     </div>
@@ -134,7 +158,7 @@
                 </div>
             </div>
             <div class ="col">
-                <div class="tres-card">
+                <div class="tres-card" id="a">
                     <div class="tres-title">
                         <p>Greek Sing Logistical Chair</p>
                     </div>
@@ -148,7 +172,7 @@
                 </div>
             </div>
             <div class ="col">
-                <div class="tres-card">
+                <div class="tres-card" id="b">
                     <div class="tres-title">
                         <p>Carnegie Mellon Panhellenic </p>
                     </div>
@@ -160,6 +184,54 @@
                         the $30,000 surplus and finding productive uses of it; Most recently I proposed and passed a series
                         of five yearly scholarships that addressed financial concerns of the community. The sum amount of
                         $2,500 will be raised yearly through fines and the remaining allocated directly from dues.
+                    </p>    
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class ="col">
+                <div class="tres-card" id="c">
+                    <div class="tres-title">
+                        <p>Smart Woman Securities</p>
+                    </div>
+                    <div class="tres-description">
+                        <p>Analyst on the health care team</p>
+                    </div>
+                    <p>I was the PM for a group of three students for the final project of this class. The project lasted
+                        over two months and lead us from a case study to a finalized working database. We conducted an
+                        analysis and a preliminary ERD along with user stories and use cases in order to determine what
+                        Uber's database might look like. The database was designed in BCNF and was bulit using PostgreSQL.
+                        We wrote functions in python which parsed the SQL and exectued our user stories within the database.
+                    </p>    
+                </div>
+            </div>
+            <div class ="col">
+                <div class="tres-card" id="a">
+                    <div class="tres-title">
+                        <p>Paper.io</p>
+                    </div>
+                    <div class="tres-description">
+                        <p>Multiplayer Game in Python, 15-112 Fundamentals of Programming</p>
+                    </div>
+                    <p>Designed and executed a multiplayer game in Python modeled after the popular online game paper.io.
+                        Explored and used modules such as socketing, shapely, and pygame to create a dyanmic user interface
+                        and customizable game settings.
+                    </p>    
+                </div>
+            </div>
+            <div class ="col">
+                <div class="tres-card" id="b">
+                    <div class="tres-title">
+                        <p>180 Degrees Consulting</p>
+                    </div>
+                    <div class="tres-description">
+                        <p>Student Consultant Spring 2020 - ongoing</p>
+                    </div>
+                    <p>Member of the data science team working on the technical side for various paid consulting projects.
+                        In 2020 we worked for Bibhuti organizing their current data, improving the process of data collection,
+                        and analyzing the data that we had available to us. As a club we attended various consulting firms
+                        such as Deloitte, PWC, and 
                     </p>    
                 </div>
             </div>
