jk forgot one thing

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <center><a href="#tres">Work</a></center>
             </div>
             <div class="col"> 
-                <center><a href="#">Fun</a></center>
+                <center><a href="#quatro">Fun</a></center>
             </div>
         </div>
     </div>
