committing w fun updates

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
             </div>
             <div class="col" id="duo-description">
                 <p>
-                    I'm Kat, a sophomore at Carnegie Mellon University studying Information Systems with a focus in Quantiative Anslysis.
-                    On campus I'm involved in Greek Sing, CMU's MakerSpace, and the Statistics Department.
+                    I'm Kat, a junior at Carnegie Mellon University studying Information Systems with a focus in Quantiative Anslysis.
                     <br></br>
-                    This summer I'll be working at Google as a Technical Program Manager in New York. I'll be working on a corporate
-                    engineering team that uses data science to inform leadership on their decisions.
+                    On campus I'm involved in Greek Sing, CMU's MakerSpace, and the Statistics Department. In my free time I enjoy hiking,
+                    playing Settlers of Catan, and indoor rock climbing.
                     <br></br>
-                    I'm interested in Quantitative, Data Science, and PM positions for Summer 2021 Internships.
+                    For Summer 2021, I'll be working at Apple as a Product Manager in the IS&T Internship Program.
+                    I'll be graduating in December 2021 and I'm currently transitioning to looking for full time roles!
                     <br></br>
                     <center>
                         <a href="https://www.linkedin.com/in/kathryn-phelps-64594b149/"><img src="https://img.icons8.com/bubbles/50/000000/linkedin.png"/></a>
@@ -87,14 +87,32 @@
     </div>
 
     <div class="container-fluid" id="tres">
-        <div class="row">
+        <div class="row" id="a">
+            <div class ="col">
+                <div class="tres-card" id="b">
+                    <div class="tres-title">
+                        <p>End to End Machine Learning Pipeline</p>
+                    </div>
+                    <div class="tres-description">
+                        <p>Google Technical Program Manager Internship in Python using Google Cloud Platform, Summer 2020</p>
+                    </div>
+                    <p> My internship at Google was open ended and allowed me and my TPM partner lots of room for creativity and 
+                        customization. We were able to pick our own use case to focus on, researched and chose the GCP tools we used, 
+                        and made our own statistical decisions. We created a proof of concept by implementing a non-automated pipeline 
+                        using the same technolgoies we would later use for the automated  version. We led a Google Engineer in assisting 
+                        us to create the pipeline using Python and parsing SQL— allowing us to automate the pipeline from uploading the 
+                        CSV file to dashboarded ready results. This included ingestion, preprocessing, learning models, and creating 
+                        digestable results. 
+                    </p>    
+                </div>
+            </div>
             <div class ="col">
                 <div class="tres-card" id="a">
                     <div class="tres-title">
-                        <p>Teaching Assistant 36-200</p>
+                        <p>Teaching Assistant</p>
                     </div>
                     <div class="tres-description">
-                        <p>Carnegie Mellon University Spring 2019 - Spring 2020</p>
+                        <p>36-200 Reasoning With Data, Carnegie Mellon University, Spring 2019 - Spring 2020</p>
                     </div>
                     <p>After taking the class 36-200 Reasoning With Data, an introductory stats class at CMU, I TA'ed the class
                         for the following year under Professor Weinberg. Both semesters I was the recitation leader and taught my
@@ -106,28 +124,12 @@
                 </div>
             </div>
             <div class ="col">
-                <div class="tres-card" id="b">
-                    <div class="tres-title">
-                        <p>Stellar Temperature Project</p>
-                    </div>
-                    <div class="tres-description">
-                        <p>Data analysis in R, 36-290 Introduction to Statistical Practice</p>
-                    </div>
-                    <p>Using stellar temparture data I conducted a through EDA and took appropriate action to prepare my data
-                        for independent learning. I then create a model that utilizied boosting, random forest, BSS, and 
-                        regression to analyze which predictors most accurately predicted the temperature. The project then moved
-                        into a group stage where we consolidated our findings and created an academic poster to present at
-                        CMU's Meeting of the Minds in 2020.
-                    </p>    
-                </div>
-            </div>
-            <div class ="col">
                 <div class="tres-card" id="c">
                     <div class="tres-title">
                         <p>The A&M Creamery</p>
                     </div>
                     <div class="tres-description">
-                        <p>Web application, 67-272 Application Design and Development</p>
+                        <p>Web application, 67-272 Application Design and Development, Spring 2020</p>
                     </div>
                     <p>Built from scratch I went through the process of designing and building the project in Ruby on Rails
                         using the MVC framework. The project was built iteratively starting with a thorough list of use cases
@@ -139,6 +141,50 @@
                 </div>
             </div>
         </div>
+
+        <div class="row" id="b">
+            <div class ="col">
+                <div class="tres-card" id="a">
+                    <div class="tres-title">
+                        <p>Director of New Member Education</p>
+                    </div>
+                    <div class="tres-description">
+                        <p>Delta Gamma, Spring 2020 - Fall 2021</p>
+                    </div>
+                    <p>
+                    </p>    
+                </div>
+            </div>
+            <div class ="col">
+                <div class="tres-card" id="c">
+                    <div class="tres-title">
+                        <p>Stellar Temperature Project</p>
+                    </div>
+                    <div class="tres-description">
+                        <p>Data analysis in R, 36-290 Introduction to Statistical Practice, Fall 2019</p>
+                    </div>
+                    <p>Using stellar temparture data I conducted a through EDA and took appropriate action to prepare my data
+                        for independent learning. I then create a model that utilizied boosting, random forest, BSS, and 
+                        regression to analyze which predictors most accurately predicted the temperature. The project then moved
+                        into a group stage where we consolidated our findings and created an academic poster to present at
+                        CMU's Meeting of the Minds in 2020.
+                    </p>    
+                </div>
+            </div>
+            <div class ="col">
+                <div class="tres-card" id="b">
+                    <div class="tres-title">
+                        <p>Greek Sing Fundraising Chair</p>
+                    </div>
+                    <div class="tres-description">
+                        <p>Delta Gamma, Fall 2020 - Spring 2021</p>
+                    </div>
+                    <p>
+                    </p>    
+                </div>
+            </div>
+        </div>
+
         <br></br>
         <div class="row">
             <div class ="col">
@@ -147,56 +193,7 @@
                         <p>Uber Database Project</p>
                     </div>
                     <div class="tres-description">
-                        <p>Project Manager, 67-262 Databased Design and Development in SQL and Python</p>
-                    </div>
-                    <p>I was the PM for a group of three students for the final project of this class. The project lasted
-                        over two months and lead us from a case study to a finalized working database. We conducted an
-                        analysis and a preliminary ERD along with user stories and use cases in order to determine what
-                        Uber's database might look like. The database was designed in BCNF and was bulit using PostgreSQL.
-                        We wrote functions in python which parsed the SQL and exectued our user stories within the database.
-                    </p>    
-                </div>
-            </div>
-            <div class ="col">
-                <div class="tres-card" id="a">
-                    <div class="tres-title">
-                        <p>Greek Sing Logistical Chair</p>
-                    </div>
-                    <div class="tres-description">
-                        <p>Delta Gamma Greek Sing Chair Fall 2019 - Spring 2020</p>
-                    </div>
-                    <p>I planned and organized Delta Gamma's greek sing production from fraternity pairing to conception.
-                        As the logistical chair I managed the budget, organized a timeline, facilitated chair to cast
-                        communication, fufilled our service hour requirement, and much more. 
-                    </p>    
-                </div>
-            </div>
-            <div class ="col">
-                <div class="tres-card" id="b">
-                    <div class="tres-title">
-                        <p>Carnegie Mellon Panhellenic </p>
-                    </div>
-                    <div class="tres-description">
-                        <p>VP Operations Spring 2020 - Fall 2020</p>
-                    </div>
-                    <p>As VP Operations for Carnegie Mellon Panhellenic I isued fines and dues, planned the $17,000 budget,
-                        and maintained the rosters for all 400+ members. A critical part of my position has been managing
-                        the $30,000 surplus and finding productive uses of it; Most recently I proposed and passed a series
-                        of five yearly scholarships that addressed financial concerns of the community. The sum amount of
-                        $2,500 will be raised yearly through fines and the remaining allocated directly from dues.
-                    </p>    
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class ="col">
-                <div class="tres-card" id="c">
-                    <div class="tres-title">
-                        <p>Smart Woman Securities</p>
-                    </div>
-                    <div class="tres-description">
-                        <p>Analyst on the health care team</p>
+                        <p>Project Manager, 67-262 Databased Design and Development in SQL and Python, Fall 2019</p>
                     </div>
                     <p>I was the PM for a group of three students for the final project of this class. The project lasted
                         over two months and lead us from a case study to a finalized working database. We conducted an
@@ -212,7 +209,7 @@
                         <p>Paper.io</p>
                     </div>
                     <div class="tres-description">
-                        <p>Multiplayer Game in Python, 15-112 Fundamentals of Programming</p>
+                        <p>Multiplayer Game in Python, 15-112 Fundamentals of Programming, Fall 2018</p>
                     </div>
                     <p>Designed and executed a multiplayer game in Python modeled after the popular online game paper.io.
                         Explored and used modules such as socketing, shapely, and pygame to create a dyanmic user interface
@@ -223,15 +220,16 @@
             <div class ="col">
                 <div class="tres-card" id="b">
                     <div class="tres-title">
-                        <p>180 Degrees Consulting</p>
+                        <p>Carnegie Mellon Panhellenic </p>
                     </div>
                     <div class="tres-description">
-                        <p>Student Consultant Spring 2020 - ongoing</p>
+                        <p>VP Operations, Spring 2020 - Fall 2020</p>
                     </div>
-                    <p>Member of the data science team working on the technical side for various paid consulting projects.
-                        In 2020 we worked for Bibhuti organizing their current data, improving the process of data collection,
-                        and analyzing the data that we had available to us. As a club we attended various consulting firms
-                        such as Deloitte, PWC, and 
+                    <p>As VP Operations for Carnegie Mellon Panhellenic I isued fines and dues, planned the $17,000 budget,
+                        and maintained the rosters for all 400+ members. A critical part of my position has been managing
+                        the $30,000 surplus and finding productive uses of it; Most recently I proposed and passed a series
+                        of five yearly scholarships that addressed financial concerns of the community. The sum amount of
+                        $2,500 will be raised yearly through fines and the remaining allocated directly from dues.
                     </p>    
                 </div>
             </div>
@@ -239,12 +237,12 @@
     </div>
 
     <div class="container-fluid" id="quatro">
-        <div class="quatro-card">
+        <!-- <div class="quatro-card">
             I attended an arts high school, LaGuardia, and I've journaled extensively since my Freshman year of high school.
             Unfortunately, many of my journals and projects are at home but I'll be adding my woodworking, ceramics, paintings,
             and even more journal pages soon.
             <br></br>
-        </div>
+        </div> -->
         <br></br>
         <div class="row">
             <div class ="col">
@@ -372,6 +370,34 @@
             </div>
         </div>
         <br></br>
+        <div class="quatro-card"> okay <br></br></div>
+        <br></br>
+    </div>
+
+    <div class="container-fluid" id="seis">
+        <div class = "row" id = "seis">
+            <div class ="col">
+                <img class="seis-images" id="a" src="images/BW2/a.jpg" alt="">
+            </div>
+            <div class ="col">
+                <img class="seis-images" id="a" src="images/BW2/b.jpg" alt="">
+            </div>
+            <div class ="col">
+                <img class="seis-images" id="a" src="images/BW2/c.jpg" alt="">
+            </div>
+        </div>
+        <br></br>
+        <div class = "row" id = "seis">
+            <div class ="col">
+                <img class="seis-images" id="a" src="images/BW2/d.jpg" alt="">
+            </div>
+            <div class ="col">
+                <img class="seis-images" id="a" src="images/BW2/e.jpg" alt="">
+            </div>
+            <div class ="col">
+                <img class="seis-images" id="a" src="images/BW2/f.jpg" alt="">
+            </div>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
