for final critique

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </div>
 
     <div class="container-fluid" id="quatro">
-        <div class="quatro-card"><center><b>Black and White 2 Photography</b> </center>
+        <div class="quatro-card"><center><b>Photography</b> </center>
             </p>
             I made my most successful art during the most intense and difficult parts of my life. But I&#39;ve
             never been so at peace as I am now. How do you make art about feeling satisfied? About being
@@ -256,9 +256,28 @@
                 <center><img class="quatro-images" src="images/BW2/g.jpg" alt=""></center>
             </div>
         </div>
+        <br></br>
+        <div class = "row">
+          <div class ="col-12 col-sm-6 col-md-8">
+              <center><img class="quatro-images" src="images/BW2/k.jpeg" alt=""></center>
+          </div>
+          <div class ="col">
+              <center><img class="quatro-images" src="images/BW2/h.jpeg" alt=""></center><br></br>
+              <center><img class="quatro-images" src="images/BW2/j.jpeg" alt=""></center>
+          </div>
+        </div>
+        <br></br>
+        <div class = "row">
+          <div class ="col">
+              <center><img class="quatro-images" src="images/BW2/l.jpeg" alt=""></center>
+          </div>
+          <div class ="col">
+              <center><img class="quatro-images" src="images/BW2/i.jpeg" alt=""></center>
+          </div>
+      </div>
     </div>
     <div class="container-fluid" id="cinco">
-        <div class="cinco-card">A seletion of photos from the past few years <br></br></div>
+        <div class="cinco-card">A selection of photos from the past few years <br></br></div>
         <br></br>
         <div class="row">
             <div class ="col">
