--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
     </div>
 
-    <div class="container-fluid" id="quatro">
+    <!-- <div class="container-fluid" id="quatro">
         <div class="quatro-card"><center><b>Photography</b> </center>
             </p>
             I made my most successful art during the most intense and difficult parts of my life. But I&#39;ve
@@ -349,7 +349,7 @@
                     </a>
             </div>
         </div>
-        <br></br>
+        <br></br> -->
         <!-- <div class="row">
             <div class ="col"></div>
             <div class ="col-4">
